setting the hostname right on the VM so that pyspark works